--- a/CLASS EXERCISE.ipynb
+++ b/CLASS EXERCISE.ipynb
@@ -56,16 +56,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type in name of employee: eklvin\n",
+      "Type in amount to be paid to employee: 67\n",
+      "eklvin\n",
+      "67\n",
+      "Type in name of employee: joelo\n",
+      "Type in amount to be paid to employee: 567\n",
+      "joelo\n",
+      "567\n",
+      "Type in name of employee: hut\n",
+      "Type in amount to be paid to employee: 65768\n",
+      "hut\n",
+      "65768\n"
+     ]
+    }
+   ],
    "source": [
-    "def showemployee():\n",
-    "    for i in range(3):\n",
-    "        Name = input(\"Type in name of employee: \", )\n",
-    "        Salary = input(\"Type in amount to be paid to employee: \", )\n",
-    "        print(Name)\n",
-    "        print(Salary)"
+    "\n",
+    "for i in range(3):\n",
+    "    Name = input(\"Type in name of employee: \", )\n",
+    "    Salary = input(\"Type in amount to be paid to employee: \", )\n",
+    "    print(Name)\n",
+    "    print(Salary)"
    ]
   },
   {
