--- a/CLASS EXERCISE.ipynb
+++ b/CLASS EXERCISE.ipynb
@@ -130,9 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type in any word with uppercase and lowercase: bbsrbbwrntnw\n",
+      "Number of uppercase letters:  0\n",
+      "Number of lowercase letters:  12\n"
+     ]
+    }
+   ],
    "source": [
     "def count_upper_lower(string):\n",
     "    lowercase_letter_count = 0\n",
