--- a/JUPYTER/lab-exercise-I.ipynb
+++ b/JUPYTER/lab-exercise-I.ipynb
@@ -203,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input a positive integer: 200\n",
-      "sum of cubes:  396010000.0\n"
+      "input a positive integer: 30\n",
+      "sum of cubes:  189225.0\n"
      ]
     }
    ],
@@ -226,6 +226,13 @@
     "print(\"sum of cubes: \" ,sum_of_cubes(float(input(\"input a positive integer: \", ))))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
